--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Never Let Me Go - Study Organizer</title>
@@ -254,6 +258,66 @@
 </div>
 
 <script>
+    <script>
+   // Firebase 配置（从 Firebase 控制台复制）
+   const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      databaseURL: "YOUR_DATABASE_URL",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_STORAGE_BUCKET",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID"
+   };
+
+   // 初始化 Firebase
+   const app = firebase.initializeApp(firebaseConfig);
+   const database = firebase.database(app);
+    <body>
+   <h1>实时编辑内容</h1>
+   <!-- 输入框 -->
+   <input type="text" id="messageInput" placeholder="输入新内容">
+   <button onclick="updateMessage()">保存内容</button>
+
+   <!-- 显示区域 -->
+   <p id="messageDisplay"></p>
+
+   <script>
+      // 获取 Firebase 数据库的引用
+      const messageRef = database.ref('messages/message');
+
+      // 实时监听数据变化
+      messageRef.on('value', (snapshot) => {
+         const data = snapshot.val();
+         document.getElementById('messageDisplay').innerText = data || "没有内容";
+      });
+
+      // 保存用户输入的内容到 Firebase
+      function updateMessage() {
+         const message = document.getElementById('messageInput').value;
+         messageRef.set(message);  // 保存内容到 Firebase
+      }
+   </script>
+</body>
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+const firebaseConfig = {
+  apiKey: "AIzaSyAA6IM_CGfc749lOpY8nMmhD0BwcyY0NnE",
+  authDomain: "never-let-me-go-organizer.firebaseapp.com",
+  projectId: "never-let-me-go-organizer",
+  storageBucket: "never-let-me-go-organizer.firebasestorage.app",
+  messagingSenderId: "464059546986",
+  appId: "1:464059546986:web:2100c7ef5f3a2b071d7913"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+</script>
+
     // Function for bold text
     function toggleBold(section) {
         document.execCommand('bold', false, null);
